# fastapi_client

./: pyproject.toml
