[tool.poetry]
name = "fastapi-client-generator"
version = "0.3.0"
description = ""
authors = ["David Montague"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
httpx = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
autoflake = "^1.4"
coverage = "^5.5"
pytest-cov = "^2.12.1"
black = "^21.6b0"
mypy = "^0.910"
isort = "^5.9.1"
python-multipart = "^0.0.5"
uvicorn = "^0.14.0"
flake8 = "^3.9.2"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | build
    | pybind11
  )/
)
'''

[tool.isort]
line_length = 120
known_first_party = ["client"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
